<resources>
    <string name="app_name">Like Connections Application</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="Register"></string>
    <string name="Sign_In"></string>
    <string name="Search"></string>
    <string name="Profile"></string>
    <string name="Settings"></string>
    <string name="About"></string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="search_an_interest">Search an Interest</string>
    <string name="go">Go</string>
    <string name="sign_up">Sign Up</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="todo">TODO</string>
    <string name="description">Description</string>
    <string name="viewtag">ViewTag</string>
    <string name="sign_in">Sign In</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="search">Search</string>

    <!-- for list_item.xml-->
    <string name="user_name">user name</string>


</resources>