<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menuSearch"
        android:title="@string/search"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menuSignin"
        android:title="@string/sign_in"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menuRegister"
        android:title="@string/register"
        app:showAsAction="never" />
    <item
        android:id="@+id/menuProfile"
        android:title="@string/profile"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menuSettings"
        android:title="@string/settings"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menuAbout"
        android:title="@string/about"
        app:showAsAction="never"/>
</menu>